--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -10,7 +10,7 @@
                 <param name="LevelMin" value="DEBUG" />
                 <param name="LevelMax" value="FATAL" />
             </filter>
-            <file value="logs/log.txt" />
+            <file value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\bin\Release\netcoreapp3.1\logs\log.txt" />
             <appendToFile value="true" />
             <rollingStyle value="Size" />
             <maxSizeRollBackups value="10" />
