--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -23,6 +23,7 @@
         </appender>
 
         <appender name="Forwarding2RollingFileAppender" type="log4net.tools.ForwardingAppenderAsync, log4net.tools">
+            <Fix value="260"/>
             <appender-ref ref="RollingFileAppender" />
         </appender>
         
