--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -22,6 +22,13 @@
             </layout>
         </appender>
 
+        <appender name="BufferingForwardingAppender" type="log4net.Appender.BufferingForwardingAppender">
+            <bufferSize value="10" />
+            <Fix value="260" />
+            <lossy value="false" />
+            <appender-ref ref="RollingFileAppender" />
+        </appender>
+
         <appender name="Forwarding2RollingFileAppender" type="log4net.tools.ForwardingAppenderAsync, log4net.tools">
             <Fix value="260"/>
             <appender-ref ref="RollingFileAppender" />
@@ -37,6 +44,10 @@
 
         <logger name="Forwarding2RollingFileLogger" additivity="false">
             <appender-ref ref="Forwarding2RollingFileAppender" />
+        </logger>
+
+        <logger name="BufferingForwardingLogger" additivity="false">
+            <appender-ref ref="BufferingForwardingAppender" />
         </logger>
     </log4net>
 </configuration>
