--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -4,6 +4,10 @@
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
 
+    <appSettings>
+        <add key="log4net.Internal.Debug" value="false"/>
+    </appSettings>
+
     <log4net>
         <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
             <filter type="log4net.Filter.LevelRangeFilter">
@@ -33,7 +37,62 @@
             <Fix value="260"/>
             <appender-ref ref="RollingFileAppender" />
         </appender>
+
+        <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+            <bufferSize value="100" />
+            <connectionType value="System.Data.SqlClient.SqlConnection, System.Data.SqlClient" />
+            <connectionString value="Data Source=ABOROVTSOV;Initial Catalog=test_db;Integrated Security=True" />
+            <commandText value="INSERT INTO Log ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception)" />
+            <parameter>
+                <parameterName value="@log_date" />
+                <dbType value="DateTime" />
+                <layout type="log4net.Layout.RawTimeStampLayout" />
+            </parameter>
+            <parameter>
+                <parameterName value="@thread" />
+                <dbType value="String" />
+                <size value="255" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%thread" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@log_level" />
+                <dbType value="String" />
+                <size value="50" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%level" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@logger" />
+                <dbType value="String" />
+                <size value="255" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%logger" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@message" />
+                <dbType value="String" />
+                <size value="4000" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%message" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@exception" />
+                <dbType value="String" />
+                <size value="2000" />
+                <layout type="log4net.Layout.ExceptionLayout" />
+            </parameter>
+        </appender>
         
+        <appender name="ForwardingAdoNetAppender" type="log4net.tools.ForwardingAppenderAsync, log4net.tools">
+            <Fix value="260"/>
+            <appender-ref ref="AdoNetAppender" />
+        </appender>
+
         <root>
             <level value="All" />
         </root>
@@ -48,6 +107,15 @@
 
         <logger name="BufferingForwardingLogger" additivity="false">
             <appender-ref ref="BufferingForwardingAppender" />
+        </logger>
+
+        
+        <logger name="AdoNetLogger" additivity="false">
+            <appender-ref ref="AdoNetAppender" />
+        </logger>
+
+        <logger name="ForwardingAdoNetLogger" additivity="false">
+            <appender-ref ref="ForwardingAdoNetAppender" />
         </logger>
     </log4net>
 </configuration>
