--- a/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
+++ b/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
