--- a/log4net.tools/log4net.tools.csproj
+++ b/log4net.tools/log4net.tools.csproj
@@ -12,13 +12,14 @@
     <Description>Tools for log4net users: 
 - ForwardingAppenderAsync forwards LoggingEvents to a list of attached appenders asynchronously.</Description>
     <RepositoryType>git</RepositoryType>
-    <Version>1.2.0</Version>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <Version>1.3.0</Version>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
     <PackageIcon>icon.png</PackageIcon>
-    <FileVersion>1.2.0.0</FileVersion>
-    <PackageReleaseNotes>- handle closing of the appender when the buffer is not empty;
+    <FileVersion>1.3.0.0</FileVersion>
+    <PackageReleaseNotes>- introduce the experimental ForwardingAppenderAsyncWithMetrics.
 - update the error handling;
-- update tests.</PackageReleaseNotes>
+- minor refactoring.
+</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
