--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -38,6 +38,14 @@
             <appender-ref ref="RollingFileAppender" />
         </appender>
 
+        <appender name="Forwarding2RollingFileAppenderWithMetrics" type="log4net.tools.ForwardingAppenderAsyncWithMetrics, log4net.tools">
+            <Fix value="260"/>
+            <MetricsWriter type="log4net.tools.integration.MetricsCsvWriter, log4net.tools.integration">
+                <CsvFilePath value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\bin\Release\netcoreapp3.1\logs\data.csv"/>
+            </MetricsWriter> 
+            <appender-ref ref="RollingFileAppender" />
+        </appender>
+
         <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
             <bufferSize value="100" />
             <connectionType value="System.Data.SqlClient.SqlConnection, System.Data.SqlClient" />
@@ -103,6 +111,10 @@
 
         <logger name="Forwarding2RollingFileLogger" additivity="false">
             <appender-ref ref="Forwarding2RollingFileAppender" />
+        </logger>
+
+        <logger name="ForwardingWithMetrics2RollingFileLogger" additivity="false">
+            <appender-ref ref="Forwarding2RollingFileAppenderWithMetrics" />
         </logger>
 
         <logger name="BufferingForwardingLogger" additivity="false">
