--- a/log4net.tools.integration/log4net.tools.integration.csproj
+++ b/log4net.tools.integration/log4net.tools.integration.csproj
@@ -2,6 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Alexander Borovtsov</Authors>
+    <Copyright>Alexander Borovtsov</Copyright>
+    <RepositoryUrl>https://github.com/ABorovtsov/log4net</RepositoryUrl>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageTags>log4net integration csv</PackageTags>
+    <PackageProjectUrl>https://github.com/ABorovtsov/log4net</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Description>Tools for log4net users:
+- MetricsCsvWriter writes logging metrics in a csv file.</Description>
+    <RepositoryType>git</RepositoryType>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <PackageReleaseNotes>- introduce the metrics csv writer.</PackageReleaseNotes>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +25,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\log4net.tools\log4net.tools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\img\icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
