--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -42,6 +42,7 @@
             <Fix value="260"/>
             <MetricsWriter type="log4net.tools.integration.MetricsCsvWriter, log4net.tools.integration">
                 <CsvFilePath value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\bin\Release\netcoreapp3.1\logs\data.csv"/>
+                <MaxRowCount value="10000"/>
             </MetricsWriter> 
             <appender-ref ref="RollingFileAppender" />
         </appender>
