--- a/log4net.tools.benchmarks/App.config
+++ b/log4net.tools.benchmarks/App.config
@@ -14,7 +14,7 @@
                 <param name="LevelMin" value="DEBUG" />
                 <param name="LevelMax" value="FATAL" />
             </filter>
-            <file value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\bin\Release\netcoreapp3.1\logs\log.txt" />
+            <file value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\logs\log.txt" />
             <appendToFile value="true" />
             <rollingStyle value="Size" />
             <maxSizeRollBackups value="10" />
@@ -40,9 +40,10 @@
 
         <appender name="Forwarding2RollingFileAppenderWithMetrics" type="log4net.tools.ForwardingAppenderAsyncWithMetrics, log4net.tools">
             <Fix value="260"/>
+            <WorkerPoolSize value="5"/>
             <MetricsWriter type="log4net.tools.integration.MetricsCsvWriter, log4net.tools.integration">
-                <CsvFilePath value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\bin\Release\netcoreapp3.1\logs\data.csv"/>
-                <MaxRowCount value="10000"/>
+                <CsvFilePath value="F:\Projects\Aborovtsov\log4net\log4net.tools.benchmarks\logs\data.csv"/>
+                <MaxRowCount value="100000"/>
             </MetricsWriter> 
             <appender-ref ref="RollingFileAppender" />
         </appender>
