--- a/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
+++ b/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\log4net.tools\log4net.tools.csproj" />
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="cd $(ProjectDir)logs\&#xD;&#xA;del *.* /q" />
+  </Target>
+
 </Project>
