--- a/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
+++ b/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	<RootNamespace>log4net.tools.benchmarks</RootNamespace>
+	<AssemblyName>log4net.tools.benchmarks</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="System.Data.SqlClient" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,8 +20,14 @@
     <ProjectReference Include="..\log4net.tools\log4net.tools.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="cd $(ProjectDir)logs\&#xD;&#xA;del *.* /q" />
+    <!--<Exec Command="cd $(ProjectDir)logs\&#xD;&#xA;del *.* /q" />-->
   </Target>
 
 </Project>
