--- a/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
+++ b/log4net.tools.benchmarks/log4net.tools.benchmarks.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <!--<Exec Command="cd $(ProjectDir)logs\&#xD;&#xA;del *.* /q" />-->
+    <Exec Command="cd $(ProjectDir)logs\&#xD;&#xA;del *.* /q" />
   </Target>
 
 </Project>
